GNOME Bugzilla – Bug 638700
buttons: Fix background functions for non-default layouts
Last modified: 2011-02-03 20:13:34 UTC
Patch ported from mutter commit 9f2581318 - see bug 635686 for details.
Created attachment 177522 [details] [review] buttons: Fix background functions for non-default layouts While the configured layout is taken into account for positioning the buttons, the mapping from button function states to button position states just assumed the default button layout in LTR locales. Do a proper mapping depending on the actual layout instead.
Review of attachment 177522 [details] [review]: Looks very sensible. Committed.