buttons: Fix background functions for non-default layouts

While the configured layout is taken into account for positioning
the buttons, the mapping from button function states to button
position states just assumed the default button layout in LTR
locales.
Do a proper mapping depending on the actual layout instead.

Based on metacity commit: 6a52883c2b670ad645257373515d1e704408b93d
From: Florian Müllner <fmuellner@gnome.org>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=638700